# Madgwick

./: .gitignore  Cargo.toml  Embed.toml  README.md  memory.x
render/: acccal.py  gyrocal.py  magcal.py  render.py
src/: madgwick.rs  main.rs  quaternion.rs
