[package]
name = "firm_quat"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt-rtt = "1.1.0"
defmt = "1.0.1"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "defmt", "executor-thread"] }
embassy-futures = { version = "0.1.2", features = ["defmt"] }
embassy-nrf = { version = "0.9.0", features = [
    "defmt", 
    "gpiote", 
    "nrf52833", 
    "time", 
    "time-driver-rtc1"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
panic-halt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
static_cell = "2.1.1"
mpu6050-async = "0.1.0"
postcard = "1.1.3"
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
zerocopy = {version="0.8.47", default-features = false, features=["derive"]}
libm = "0.2.16"

[dependencies.num-traits]
version = "0.2"
default-features = false
features = ["libm"] 
